--- a/all/templates/all/method.html
+++ b/all/templates/all/method.html
@@ -1,6 +1,7 @@
 {% extends 'all/base.html' %}{% block title %}Methods{% endblock %}
 {% block content %}
 {% load static from staticfiles %}
+{% django_js jquery=false %}
 
 <div class="page-header" id="docking">
 <h1>Methods</h1>
