--- a/all/templates/all/noresults.html
+++ b/all/templates/all/noresults.html
@@ -1,4 +1,6 @@
-{% extends 'all/base.html' %}{% block title %}{{ target.name }} Models{% endblock %}
+{% extends 'all/base.html' %}
+{% django_js jquery=false %}
+{% block title %}{{ target.name }} Models{% endblock %}
 {% block content %}
 <h1>Dockit</h1><br>
 <p><big>No results match your searching criteria</big></p>
