--- a/all/templates/all/scoring.html
+++ b/all/templates/all/scoring.html
@@ -1,6 +1,7 @@
 {% extends 'all/base.html' %}{% block title %}Scoring{% endblock %}
 {% block content %}
 {% load static from staticfiles %}
+{% django_js jquery=false %}
 
 <div class="page-header">
 <h1>Scoring <small>Some text</small></h1>
