--- a/all/templates/all/search.html
+++ b/all/templates/all/search.html
@@ -1,6 +1,7 @@
 {% extends 'all/base.html' %}{% block title %}Search{% endblock %}
 {% block content %}
 {% load static from staticfiles %}
+{% django_js jquery=false %}
 
 <table><tr><td><div class="jumbotron" style="background-color:white;">
 <h1>Dockit</h1>
