--- a/all/templates/all/target.html
+++ b/all/templates/all/target.html
@@ -2,6 +2,7 @@
 {% block title %}Targets{% endblock %}
 {% block content %}
 {% load static from staticfiles %}
+{% django_js jquery=false %}
 
 <div class="page-header" id="rigid">
 <h1>Targets</h1>
