--- a/all/templates/all/model.html
+++ b/all/templates/all/model.html
@@ -1,6 +1,7 @@
 {% extends 'all/base.html' %}{% block title %}{{ model.name }}{% endblock %}
 {% block content %}
 {% load static from staticfiles %}
+{% django_js jquery=false %}
 
 <div class="page-header">
 <h1>Model details <small><a href="{% url 'target_info' model.target.name %}" class="view_target">View target details</a></small></h1>
