--- a/all/templates/all/summary.html
+++ b/all/templates/all/summary.html
@@ -1,6 +1,7 @@
 {% extends 'all/base.html' %}{% block title %}Summary{% endblock %}
 {% block content %}
 {% load static from staticfiles %}
+{% django_js jquery=false %}
 
 <div class="page-header">
 <h1>Summary <small>Some text</small></h1>
