--- a/all/templates/all/target_info.html
+++ b/all/templates/all/target_info.html
@@ -1,6 +1,7 @@
 {% extends 'all/base.html' %}{% block title %}{{ target.name }}{% endblock %}
 {% block content %}
 {% load static from staticfiles %}
+{% django_js jquery=false %}
 
 <div class="page-header">
 <h1>{{ target.name }} target details <small><a href="{% url 'model_select' target.name 'All' 'All' 0 0 0 0 1 0 %}" class="view_models">View models</a></small></h1>
