pre-merge change

--- a/all/templates/all/base.html
+++ b/all/templates/all/base.html
@@ -18,16 +18,14 @@
 <script src="http://code.highcharts.com/highcharts-more.js"></script>
 <script src="http://code.highcharts.com/modules/exporting.js"></script>
 
-<!--jsmol
-<!-- need to optimise
+<!--jsmol-->
 <script src="{ static "jsmol/js/JSmolCore.js" }"></script>
 <script src="{ static "jsmol/js/JSmol.js" }"></script>
 <script src="{ static "jsmol/js/JSmolApplet.js" }"></script>
 <script src="{ static "jsmol/js/JSmolControls.js" }"></script>
 <script src="{ static "jsmol/js/JSmolApi.js" }"></script>
 <script src="{ static "jsmol/js/j2sjmol.js" }"></script>
-<script src="{ static "jsmol/js/JSmoljQueryExt.js" }"></script>-->
-<script src="{% static "jsmol/JSmol.min.nojq.js" %}"></script>
+<script src="{ static "jsmol/js/JSmoljQueryExt.js" }"></script>
 
 <!--personal jsmol functions-->
 <script src="{% static "jsmol_functions.js" %}"></script>
