--- a/all/templates/all/base.html
+++ b/all/templates/all/base.html
@@ -5,7 +5,6 @@
 </title>
 {% django_js jquery=false %}
 {% load static from staticfiles %}
-{% django_js jquery=false %}
 
 <!--jquery, used by bootstrap, highcharts, jsmol, tablesorter and opentip-->
 <script src="{% static "jquery-1-8-2.min.js" %}"></script>
@@ -20,13 +19,13 @@
 <script src="http://code.highcharts.com/modules/exporting.js"></script>
 
 <!--jsmol-->
-<script src="{ static "jsmol/js/JSmolCore.js" }"></script>
-<script src="{ static "jsmol/js/JSmol.js" }"></script>
-<script src="{ static "jsmol/js/JSmolApplet.js" }"></script>
-<script src="{ static "jsmol/js/JSmolControls.js" }"></script>
-<script src="{ static "jsmol/js/JSmolApi.js" }"></script>
-<script src="{ static "jsmol/js/j2sjmol.js" }"></script>
-<script src="{ static "jsmol/js/JSmoljQueryExt.js" }"></script>
+<script src="{% static "jsmol/js/JSmolCore.js" %}"></script>
+<script src="{% static "jsmol/js/JSmol.js" %}"></script>
+<script src="{% static "jsmol/js/JSmolApplet.js" %}"></script>
+<script src="{% static "jsmol/js/JSmolControls.js" %}"></script>
+<script src="{% static "jsmol/js/JSmolApi.js" %}"></script>
+<script src="{% static "jsmol/js/j2sjmol.js" %}"></script>
+<script src="{% static "jsmol/js/JSmoljQueryExt.js" %}"></script>
 
 <!--personal jsmol functions-->
 <script src="{% static "jsmol_functions.js" %}"></script>
