--- a/all/templates/all/base.html
+++ b/all/templates/all/base.html
@@ -3,7 +3,6 @@
 {% block title %}
 {% endblock %}
 </title>
-{% django_js jquery=false %}
 {% load static from staticfiles %}
 {% django_js jquery=false %}
 
@@ -20,13 +19,13 @@
 <script src="http://code.highcharts.com/modules/exporting.js"></script>
 
 <!--jsmol-->
-<script src="{ static "jsmol/js/JSmolCore.js" }"></script>
-<script src="{ static "jsmol/js/JSmol.js" }"></script>
-<script src="{ static "jsmol/js/JSmolApplet.js" }"></script>
-<script src="{ static "jsmol/js/JSmolControls.js" }"></script>
-<script src="{ static "jsmol/js/JSmolApi.js" }"></script>
-<script src="{ static "jsmol/js/j2sjmol.js" }"></script>
-<script src="{ static "jsmol/js/JSmoljQueryExt.js" }"></script>
+<script src="{% static "jsmol/js/JSmolCore.js" %}"></script>
+<script src="{% static "jsmol/js/JSmol.js" %}"></script>
+<script src="{% static "jsmol/js/JSmolApplet.js" %}"></script>
+<script src="{% static "jsmol/js/JSmolControls.js" %}"></script>
+<script src="{% static "jsmol/js/JSmolApi.js" %}"></script>
+<script src="{% static "jsmol/js/j2sjmol.js" %}"></script>
+<script src="{% static "jsmol/js/JSmoljQueryExt.js" %}"></script>
 
 <!--personal jsmol functions-->
 <script src="{% static "jsmol_functions.js" %}"></script>
