--- a/all/templates/all/model.html
+++ b/all/templates/all/model.html
@@ -165,7 +165,7 @@ Change how the model 5 &#8491; interface residues are viewed:<br>
 </form></td></tr></table>
 
 <form name="term_form" onSubmit="return false">
-JSMol terminal:&nbsp;&nbsp;<input type="text" name="terminal" style="width: 300px" placeholder="e.g. 'select ARG; color black'" />
+JSMol terminal:&nbsp;&nbsp;<input type="text" name="terminal" style="width: 300px" placeholder="e.g. 'select SER; color black'" />
 <button onClick=update_Jmol(document.term_form.terminal.value)>Update</button>
 <button onClick=reset_Jmol();>Reset</button></form>
 
